Solve the overlap issues, and centered the header of second floor and third floor
I changed the menu width so the size of the side bar is smaller when scrolling up and down. I also make the header and the toggle in the middle of the page

--- a/q-team-room/css/app.css
+++ b/q-team-room/css/app.css
@@ -122,7 +122,7 @@
   background-color: grey;
   cursor: pointer;
   cursor: hand;
-  float: right;
+  float: left;
 }
 
 .toggle:hover {
@@ -139,7 +139,7 @@
 }
 /* this is for my side menu */
 .menu {
-    width: 300px;
+    width: 200px;
     margin-left: 0;
     background-color: white;
 }
